[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# General info
name = "dymoval"
version = "0.9.0"

# Requirements
requires-python = ">=3.10"

# Dependencies
dependencies = [
    "pandas",
    "matplotlib",
    "scipy",
    "control",
    "numpy",
    "tomli",
    "h5py",
    "typing_extensions",
]

# Other metadata
authors = [
{ name="Ubaldo Tiberi", email="ubaldo.tiberi@gmail.com" },
{ name="Ubaldo Tiberi", email="ubaldo.tiberi@volvo.com" },
]
description = "Dymoval is a Python package for validating models and analyzing datasets."
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = [
    "data-analysis",
    "modeling",
    "model validation",
    "dataset",
    "data"
]
# dynamic = ["version"] This may be useful once I will learn how to deal with versions

# For developers
[project.optional-dependencies]
build = ["pdm"]
dev = [
    "sphinx",
    "furo",
    "sphinx-toolbox",
    "sphinx-autodoc-typehints",
    "pytest",
    "mypy",
    "black",
    "flake8",
    "coverage",
    "grayskull",
]

[project.urls]
"Homepage" = "https://github.com/ubaldot/dymoval"
"Documentation" = "https://ubaldot.github.io/dymoval/"
"Bug Tracker" = "https://github.com/ubaldot/dymoval/issues"

# ===================================
# PDM settings
# ===================================
# [tool.pdm.build]
# includes = ["src", "tutorial"]


# ===================================
# Formatting, type check, unit-test
# ===================================
# black
         [tool.black]
         target-version = ['py312']
         line-length = 80
         exclude = '''/(manual_tests|docs)/'''

# mypy
         [tool.mypy]
         python_version = "3.12"
         disallow_untyped_defs = true
         disallow_untyped_calls = true
         show_error_codes = true
         no_implicit_optional = true
         warn_return_any = true
         warn_unused_ignores = true
# For now, mypy is only run on ./src
# The following two shall be module specific
         ignore_missing_imports = true
         # disable_error_code = ["name-defined"]

         [[tool.mypy.overrides]]
         module = [
             "dataset",
             "validation",
             "utils",
             "config",
         ]


        # flake8 does not work with pyproject.toml
         # [tool.flake8]
         # extend-ignore = F403,F405, E501, W291,E203, W503
         # exclude = .git,__pycache__,docs/source/conf.py,build


# pytest
         [tool.pytest.ini_options]
         norecursedirs = ["manual_tests"] # Exclude folders
         markers = [
             "plots: marks SLOW plot tests (deselect with '-m \"not plots\"')",
             "open_tutorial: marks the open_tutorial (which opens VSCode all the times)"

         ]
